OFJ-1513 Fix tables so they do not have borders/spacing/etc
Add css codes to fix tables and chart legends due to use YUI base.css

--- a/public/stylesheets/Modules.css
+++ b/public/stylesheets/Modules.css
@@ -8,6 +8,7 @@ table.modules {
 }
 
 table.modules td {
+    border-style: none;
     font-size: 1.4em;
     padding: 8px;
     vertical-align: middle;
